Cross browser layout issues eliminated

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,11 @@ html {
   font-family: Roboto,"Helvetica Neue",sans-serif;
 }
 
+body {
+  width: 100%;
+  max-width: 100%;
+}
+
 .rounded {
   border-radius: 4px;
 }
@@ -60,9 +65,8 @@ a {
 }
 
 .project-container {
-  margin-left: 8px;
+  margin-left: 9px;
   border-radius: 5px;
-  max-width: 90%;
 }
 
 .project-extra-content {
@@ -91,9 +95,32 @@ a {
   margin-right: auto;
 }
 
-.hover-text {
+.hover-left {
   margin-right:1em;
+  margin-left:auto;
 }
+
+.hover-right {
+  margin-right:2em;
+  margin-left:auto;
+}
+
+.show-more {
+  margin-right: 1em;
+}
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+}
+.group:after {
+    clear: both;
+}
+.group {
+    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
+
 
 .contact-item {
   width: 25%;
@@ -102,6 +129,7 @@ a {
   color: white;
   word-wrap: break-word;
   text-decoration: none;
+  font-weight: 300;
 }
 
 h2 {
@@ -132,20 +160,18 @@ h5 {
   margin: 3em 0em 5em 0em;
   border-radius: 3px;
   text-align: center;
+  width: 100%;
+
 }
 
 .portfolio-header .name {
   font-size: 3.3em;
+  font-weight: 300;
   margin-top:0.2em;
   margin-bottom:0.2em;
 }
 
 .flex { flex : 1 1 0%; }
-
-.skill-set {
-  padding-right: 10px;
-  min-width: 100px;
-}
 
 #me {
   width: 18%;
@@ -164,12 +190,23 @@ h5 {
   min-width: 350px;
 }
 
+.portfolio-section {
+  width: 100%;
+  max-width: 100%;
+}
+
 @media (max-width: 1400px) {
   .portfolio-header {
     font-size: 0.9em;
   }
   .contact-item {
     width: 50%;
+  }
+}
+
+@media (max-width: 960px) {
+  .portfolio-header {
+    margin: 1.4em;
   }
 }
 
@@ -188,6 +225,7 @@ h5 {
     margin: 0px;
     border-radius: 0px;
   }
+
 
 }
 
